Revision history for Schedule::Activity

0.1.8 - 2025-..-..
	- Add support for 'unsafe' flag (enabled by default in this version)

0.1.7 - 2025-10-21
	- Schedule::Activity uses object interface
	- Tension settings for slack/buffer (undocumented)
	- Fix bug, scheduling to maximum buffer

0.1.6 - 2025-10-18
	- Node filtering
	- Attributes rolling average, fix dump/restore/reset

0.1.5 - 2025-10-15
	- Attributes use rolling averages
	- Attributes don't support historic update

0.1.4 - 2025-10-14
	- Attribute prevent value update from historic changes

0.1.3 - 2025-10-12
	- Attribute precedence

0.1.2 - 2025-10-11
	- Fixed attribute discovery within message configurations
	- Named messages

0.1.1 - 2025-10-08
	- Annotations are built and reported separately from buildSchedule
	- Attributes for activity/action nodes, reported via buildSchedule
	- Messages support strings, arrays, hashes
	- Message attributes
	- Set missing time values with a 3,4,5 ratio
	- Add samples

0.1.0 - 2025-09-28
	- Core functionality
