@@ -1,6 +1,7 @@
 Revision history for Schedule::Activity
 
 0.1.8 - 2025-..-..
+	- schedule-activity.pl
 	- Add support for 'unsafe' flag (enabled by default in this version)
 
 0.1.7 - 2025-10-21
